--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Edward Allen Mercado",
   "license": "ISC",
+  "engines": {
+    "node": "14.7.0"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
